WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171554
JSC C API should expose GC marking constraints and weak references
https://bugs.webkit.org/show_bug.cgi?id=171554
Summary
JSC C API should expose GC marking constraints and weak references
Filip Pizlo
Reported
2017-05-02 10:19:05 PDT
This lets you *almost* integrate JSC's GC with a foreign GC. It lets you implement lots of exotic reference types, way beyond weak references.
Attachments
the patch
(24.20 KB, patch)
2017-05-02 10:21 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
Windows build fix
(1023 bytes, patch)
2017-05-02 15:13 PDT
,
Don Olmstead
fpizlo
: review+
don.olmstead
: commit-queue-
Details
Formatted Diff
Diff
Windows build fix
(1.00 KB, patch)
2017-05-02 15:40 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-05-02 10:21:30 PDT
Created
attachment 308829
[details]
the patch
Build Bot
Comment 2
2017-05-02 10:24:20 PDT
Attachment 308829
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/API/JSMarkingConstraintPrivate.h:26: Use #pragma once instead of #ifndef for header guard. [build/header_guard] [5] ERROR: Source/JavaScriptCore/API/tests/testapi.c:1167: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: Source/JavaScriptCore/API/JSMarkingConstraintPrivate.cpp:79: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/API/JSWeakPrivate.h:26: Use #pragma once instead of #ifndef for header guard. [build/header_guard] [5] Total errors found: 4 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2017-05-02 10:44:42 PDT
Comment on
attachment 308829
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=308829&action=review
r=me
> Source/JavaScriptCore/API/JSMarkingConstraintPrivate.h:47 > +JS_EXPORT void JSContextGroupRegisterMarkingConstraint(JSContextGroupRef, JSMarkingConstraint, void *userData);
Usually we would do this as a pair of add/remove APIs: JSContextGroupAddMarkingConstraint, JSContextGroupRemoveMarkingConstraint.
Filip Pizlo
Comment 4
2017-05-02 11:00:50 PDT
Landed in
https://trac.webkit.org/changeset/216078/webkit
Ryan Haddad
Comment 5
2017-05-02 12:03:17 PDT
(In reply to Filip Pizlo from
comment #4
)
> Landed in
https://trac.webkit.org/changeset/216078/webkit
This change broke the Windows build:
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/1133
Filip Pizlo
Comment 6
2017-05-02 12:13:20 PDT
(In reply to Ryan Haddad from
comment #5
)
> (In reply to Filip Pizlo from
comment #4
) > > Landed in
https://trac.webkit.org/changeset/216078/webkit
> > This change broke the Windows build: > >
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/
> 1133
Hopefully fixed in
r216085
Filip Pizlo
Comment 7
2017-05-02 12:15:17 PDT
And fixed for real in
https://trac.webkit.org/changeset/216086/webkit
Don Olmstead
Comment 8
2017-05-02 14:56:19 PDT
There's still a problem with the Windows builds. The declaration of JSSynchronousGarbageCollectForDebugging in testapi.c should have an extern "C" in front of it.
Don Olmstead
Comment 9
2017-05-02 15:13:32 PDT
Created
attachment 308855
[details]
Windows build fix
Filip Pizlo
Comment 10
2017-05-02 15:21:11 PDT
(In reply to Don Olmstead from
comment #9
)
> Created
attachment 308855
[details]
> Windows build fix
That's weird that you need "extern "C"" in a C file. It may be that your fix does not work on Mac, in which case the right fix is to #ifdef __cplusplus...
Don Olmstead
Comment 11
2017-05-02 15:40:28 PDT
Created
attachment 308862
[details]
Windows build fix Add __cplusplus guard
Filip Pizlo
Comment 12
2017-05-02 16:17:38 PDT
(In reply to Don Olmstead from
comment #11
)
> Created
attachment 308862
[details]
> Windows build fix > > Add __cplusplus guard
Thank you for doing this!
Don Olmstead
Comment 13
2017-05-02 19:07:06 PDT
Reopening so hopefully the patch will land
Don Olmstead
Comment 14
2017-05-02 19:08:32 PDT
(In reply to Filip Pizlo from
comment #12
)
> (In reply to Don Olmstead from
comment #11
) > > Created
attachment 308862
[details]
> > Windows build fix > > > > Add __cplusplus guard > > Thank you for doing this!
No problem!
WebKit Commit Bot
Comment 15
2017-05-02 19:48:52 PDT
Comment on
attachment 308862
[details]
Windows build fix Clearing flags on attachment: 308862 Committed
r216109
: <
http://trac.webkit.org/changeset/216109
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug